syntax = "proto3";
package gameserver;

option go_package = "../grpc";
import "google/protobuf/empty.proto";

message JoinRequest {
  string ticket_id = 1;
}

message JoinResponse {
  repeated Member members = 1;
  bool ready = 2;
}

message Member {
  string name = 1;
  bool ready = 2;
}

message MemberTicket {
  string ticket_id = 1;
  string name = 2;
}

message AllocateRequest {
  repeated MemberTicket tickets = 1;
  string backfill_id = 2;
}

service GameServerService {
  rpc Join(JoinRequest) returns (stream JoinResponse) {}
  rpc Allocate(AllocateRequest) returns (google.protobuf.Empty) {}
}
